--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -94,6 +94,8 @@
                             <option value="24">24. IV тип - специализированные школы-интернаты “Нурли Маскан” для слабовидящих и тех, кто впоследствии потеряет зрение</option>
                             <option value="25">25. V тип - школы-интернаты для детей с тяжелыми нарушениями речи</option>
                             <option value="26">26. VI тип - школы-интернаты для детей с нарушениями опорно-двигательного аппарата</option>
+                            <option value="27">27. Тип VII - школы-интернаты для детей с задержкой психического развития</option>
+                            <option value="28">28. Тип VIII - поддержка школ-интернатов для детей с задержкой интеллектуального развития</option>
                         </optgroup>
                     </select>
                 </div>
@@ -186,11 +188,11 @@
                 <div class="col-span-1">PTR3. Пол</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
-                        <input id="ptr3-1" type="radio" value="1" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-1" type="radio" value="1" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr3-1" class="ms-2 text-sm text-gray-900">1. Мужской</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr3-2" class="ms-2 text-sm text-gray-900">2. Женский</label>
                     </div>
                 </div>
@@ -259,39 +261,39 @@
                 <div class="col-span-1">PTR7. Куда направился этот молодой человек, когда он/она покинул(а) систему альтернативной опеки?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr7-1" type="radio" value="1" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-1" type="radio" value="1" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. Вернулся (ась) в свою семью</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-2" type="radio" value="2" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-2" type="radio" value="2" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-2" class="ms-2 text-sm text-gray-900">2. Живёт самостоятельно в  сообществе ( махалле)</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-3" type="radio" value="3" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-3" type="radio" value="3" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-3" class="ms-2 text-sm text-gray-900">3. Переехал(а) в квартиру/дом, предоставленные государством или благотворительными организациямиe alternative
                             care </label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-4" type="radio" value="4" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-4" type="radio" value="4" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-4" class="ms-2 text-sm text-gray-900">4. Переведен(а) в учреждение/интернат для взрослых</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-5" type="radio" value="5" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-5" type="radio" value="5" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-5" class="ms-2 text-sm text-gray-900">5. Переехал(а) в общежитие, предоставляемое высшим учебным заведением</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-6" type="radio" value="6" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-6" type="radio" value="6" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-6" class="ms-2 text-sm text-gray-900">6. Уехал за границу</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-7" type="radio" value="7" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-7" type="radio" value="7" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-7" class="ms-2 text-sm text-gray-900">7. Другии ситуации, укажите</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr7_other" name="ptr7_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-8" type="radio" value="8" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-8" type="radio" value="8" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-8" class="ms-2 text-sm text-gray-900">8. Неизвестно</label>
                     </div>
                 </div>
@@ -301,30 +303,30 @@
                 <div class="col-span-1">PTR8. Если вам известно, укажите, где в настоящее время проживает этот молодой человек?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr8-1" type="radio" value="1" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-1" type="radio" value="1" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-1" class="ms-2 text-sm text-gray-900">1. В сообществе ( махалле)</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-2" type="radio" value="2" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-2" type="radio" value="2" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-2" class="ms-2 text-sm text-gray-900">2. В интернатном учреждении</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-3" type="radio" value="3" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-3" type="radio" value="3" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-3" class="ms-2 text-sm text-gray-900">3. Умер</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-4" type="radio" value="4" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-4" type="radio" value="4" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-4" class="ms-2 text-sm text-gray-900">4. В тюрьме</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-5" type="radio" value="5" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-5" type="radio" value="5" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-5" class="ms-2 text-sm text-gray-900">5. Другое, пожалуйста, укажите</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr8_other" name="ptr8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-6" class="ms-2 text-sm text-gray-900">8. Неизвестно</label>
                     </div>
                 </div>
