--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -94,6 +94,8 @@
                             <option value="24">24. IV tur - ko’zi ojiz va keyinchalik ko’rish qobiliyatini yo’qotadiganlar uchun “Noorli maskan” ixtisoslashtirilgan maktab-internatlari</option>
                             <option value="25">25. V tur - og’ir nutq buzilishi bo’lgan bolalar uchun internatlar</option>
                             <option value="26">26. VI tur - tayanch-harakat apparati nuqsonlari bo’lgan bolalar uchun internatlar</option>
+                            <option value="27">27. VII tur - aqli zaif bolalar maktab-internatlari</option>
+                            <option value="28">28. VIII tur - aqli zaif bolalar maktab-internatlarini qo’llash</option>
                         </optgroup>
                     </select>
                 </div>
@@ -186,11 +188,11 @@
                 <div class="col-span-1">PTR3. Jinsi</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
-                        <input id="ptr3-1" type="radio" value="1" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-1" type="radio" value="1" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr3-1" class="ms-2 text-sm text-gray-900">1. Erkak</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr3-2" type="radio" value="2" name="ptr3" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr3-2" class="ms-2 text-sm text-gray-900">2. Ayol</label>
                     </div>
                 </div>
@@ -259,39 +261,39 @@
                 <div class="col-span-1">PTR7. Muqobil vasiylik tizimini tark etganida, ushbu yosh shaxs qayerga ketdi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr7-1" type="radio" value="1" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-1" type="radio" value="1" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-1" class="ms-2 text-sm text-gray-900">1. Oi'z olasiga qaytdi</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-2" type="radio" value="2" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-2" type="radio" value="2" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-2" class="ms-2 text-sm text-gray-900">2. Jamiyatga qo'shilib, mustaqil yashamoqda</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-3" type="radio" value="3" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-3" type="radio" value="3" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-3" class="ms-2 text-sm text-gray-900">3. Davlat yoki xayriya tashkilotlari tomonidan taqdim etilgan uyga ko'chib o'tdie alternative
                             care </label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-4" type="radio" value="4" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-4" type="radio" value="4" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-4" class="ms-2 text-sm text-gray-900">4. Kattalar uchun muassasa / internatga o'tkazildi</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-5" type="radio" value="5" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-5" type="radio" value="5" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-5" class="ms-2 text-sm text-gray-900">5. Oliy o'quv muassasasi tomonidan taqdim etiladiyan yotoqxonaga o'tkazildi</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-6" type="radio" value="6" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-6" type="radio" value="6" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-6" class="ms-2 text-sm text-gray-900">6. Chet elga ketdi</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-7" type="radio" value="7" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-7" type="radio" value="7" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-7" class="ms-2 text-sm text-gray-900">7. Boshqa holatlar, ko'rsating</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr7_other" name="ptr7_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr7-8" type="radio" value="8" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr7-8" type="radio" value="8" name="ptr7" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr7-8" class="ms-2 text-sm text-gray-900">8. Noma'lum</label>
                     </div>
                 </div>
@@ -301,30 +303,30 @@
                 <div class="col-span-1">PTR8. Agar sizga ma'lum bo'sa, keltiring, ushbu yosh shaxs hozirda qayerda yashaydi?</div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
-                        <input id="ptr8-1" type="radio" value="1" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-1" type="radio" value="1" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-1" class="ms-2 text-sm text-gray-900">1. Jamiyat bilan birgalikda</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-2" type="radio" value="2" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-2" type="radio" value="2" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-2" class="ms-2 text-sm text-gray-900">2. Internat muassasasida</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-3" type="radio" value="3" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-3" type="radio" value="3" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-3" class="ms-2 text-sm text-gray-900">3. Vafod etgan</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-4" type="radio" value="4" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-4" type="radio" value="4" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-4" class="ms-2 text-sm text-gray-900">4. Qamoqxonada</label>
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-5" type="radio" value="5" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-5" type="radio" value="5" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-5" class="ms-2 text-sm text-gray-900">5. Boshqa, iltimos, ko'rsating</label>
                     </div>
                     <div class="flex items-center">
                         <input type="text" id="ptr8_other" name="ptr8_other" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                     </div>
                     <div class="flex items-center">
-                        <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <input id="ptr8-6" type="radio" value="8" name="ptr8" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="ptr8-6" class="ms-2 text-sm text-gray-900">8. Noma'lum</label>
                     </div>
                 </div>
